src-ken&y/objects/Budget__c.object
<CustomObject>
    <customHelpPage>HelpBudgets</customHelpPage>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget From</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Budget From Company must match Company</errorMessage>
            <filterItems>
                <field>Period__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Budgets (Budget From)</relationshipLabel>
        <relationshipName>Budgets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Key__c</fullName>
        <externalId>true</externalId>
        <label>Budget Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Budget_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Budget To Company must match Company</errorMessage>
            <filterItems>
                <field>Period__c.Company__c</field>
                <operation>equals</operation>
                <valueField>$Source.Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Period__c</referenceTo>
        <relationshipLabel>Budgets (Budget To)</relationshipLabel>
        <relationshipName>Budgets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Check__c</fullName>
        <label>Current Check</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current_Working_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Working Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Budget_to</fullName>
        <active>true</active>
        <errorConditionFormula>Budget_To__r.Period_Start__c  &lt;=  Budget_From__r.Period_Start__c</errorConditionFormula>
        <errorDisplayField>Budget_To__c</errorDisplayField>
        <errorMessage>Budget To Period Start Date must be greater than Budget From Period Start Date</errorMessage>
    </validationRules>
</CustomObject>